--- a/resources/mobile.pagesummary.styles/pagesummary.less
+++ b/resources/mobile.pagesummary.styles/pagesummary.less
@@ -19,7 +19,7 @@
 		font: inherit;
 		font-weight: bold;
 		// FIXME: Use one of the grays defined in variables.less
-		color: @colorGray5;
+	  	color: var(--theme-page-text-color);
 
 		a {
 			color: inherit;
@@ -36,8 +36,8 @@
 	font-size: 0.85em;
 	padding-top: 0.5em;
 	padding-bottom: 0.4em;
-	background-color: @grayLightest;
-	color: @grayMedium;
+	color: var(--theme-page-text-color);
+
 }
 
 .list-thumb {
